# Estate-Radar

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/1-data/: data-preprocessing-level-2.ipynb
notebooks/1. data/: merge-flats-and-house.ipynb
notebooks/2-features/: feature-engineering.ipynb
notebooks/3-visualization/: eda-pandas-profiling.ipynb
notebooks/4-outlier_and_missing_values/: missing-value-imputation.ipynb  outlier-treatment.ipynb
notebooks/5-feature_selection/: feature-selection-and-feature-engineering.ipynb  feature-selection.ipynb
notebooks/6-Experiments/1-baseline/: baseline model.ipynb
notebooks/6-Experiments/2-advance/: .gitignore  model-selection copy.ipynb  model-selection.ipynb  model-selection_v2.ipynb
notebooks/7-Analysis_module/: data-visualization.ipynb
notebooks/8-Recommender_system/: recommender-system.ipynb
notebooks/9-insights_module/: insights-module.ipynb
notebooks/data/: data-preprocessing-flats.ipynb  data-preprocessing-houses.ipynb  data-preprocessing-level-2.ipynb
notebooks/features/: feature-engineering.ipynb
notebooks/visualization/: eda-multivariate-analysis.ipynb  eda-univariate-analysis.ipynb
streamlit_app/pages/: 1_Price Predictor.py  2_Analysis App.py  3_Recommend Appartments.py
